# mlapi

./: Dockerfile  README.md  build-push.sh  model_pipeline.pkl  pyproject.toml
.k8s/base/: deployment-lab4.yaml  kustomization.yaml
.k8s/overlays/dev/: kustomization.yaml
.k8s/overlays/prod/: kustomization.yaml  virtual-service.yaml
src/: housing_predict.py  main.py
tests/: test_src.py
